# PyAthenaJDBC

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  Pipfile  README.rst  circle.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yaml
examples/redash/: athena.py
examples/terraform/: iam.tf  provider.tf  var.tf  var.tfvars
jdbc/: LICENSE.txt  NOTICES.txt  release-notes.txt  third-party-licenses.txt
pyathenajdbc/: __init__.py  connection.py  converter.py  cursor.py  error.py  formatter.py  log4j.properties  sqlalchemy_athena.py  util.py
scripts/: delete_test_data.sh  download_driver.py  upload_test_data.sh
scripts/test_data/: delete_test_data.sh  upload_test_data.sh
tests/: __init__.py  conftest.py  test_cursor.py  test_formatter.py  test_pyathenajdbc.py  test_sqlalchemy_athena.py  test_util.py  util.py
tests/sql/: create_database.sql  create_table.sql  drop_database.sql  insert_overwrite_table.sql
